--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+tensorboardX = "==2.2"
+torch = "==1.8.1"
+torchaudio = "==0.8.1"
+torchvision = "==0.9.1"
+tqdm = "==4.60.0"
+boto3 = "==1.17.58"
+requests = "==2.25.1"
+ninja = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3"
+
