--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,9 @@ boto3 = "==1.17.58"
 requests = "==2.25.1"
 sentencepiece = "*"
 transformers = "*"
+tensorboardX = "*"
+accelerate = "*"
+datasets = "*"
 
 [dev-packages]
 
